<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fitness"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:layout_marginTop="30dp">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:id="@+id/et_emailId"
        android:background="@drawable/et_back"
        android:layout_marginTop="40dp"
        android:textColor="@color/dgrey"
        android:textColorHint="@color/dgrey">

    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/bt_submit"
        android:layout_marginTop="20dp"
        android:textColor="@color/black">

    </Button>

</LinearLayout>